--- a/apps/docs/styles/globals.css
+++ b/apps/docs/styles/globals.css
@@ -57,6 +57,10 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+* {
+  font-family: Roboto, sans-serif;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
