--- a/apps/docusaurus/src/css/custom.css
+++ b/apps/docusaurus/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #195359;
+  --ifm-color-primary-dark: #1d4b4f;
+  --ifm-color-primary-darker: #1d4b4f;
+  --ifm-color-primary-darkest: #3dc9d9;
+  --ifm-color-primary-light: #3dc9d9;
+  --ifm-color-primary-lighter: #4dd8e8;
+  --ifm-color-primary-lightest: #5be3c5;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+  --ifm-color-primary: #3dc9d9;
+  --ifm-color-primary-dark: #2fa8b8;
+  --ifm-color-primary-darker: #2a9eae;
+  --ifm-color-primary-darkest: #1f7f8f;
+  --ifm-color-primary-light: #4dd8e8;
+  --ifm-color-primary-lighter: #4fddbf;
+  --ifm-color-primary-lightest: #5be3c5;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
