--- a/sites/twin.run/src/styles.css
+++ b/sites/twin.run/src/styles.css
@@ -9,6 +9,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  
 }
 
 body {
@@ -21,6 +22,11 @@ body {
 html {
   width: 100%;
   height: 100%;
+}
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
 
 #editors {
